Aggregate inventory system